--- a/server/autoscale-server.yml
+++ b/server/autoscale-server.yml
@@ -19,6 +19,13 @@ spec:
       containers:
       - name: cpuload
         image: quasarstack/flask:v1
+        resources:
+          requests:
+            memory: "1024Mi"
+            cpu: "100m"
+          limits:
+            memory: "1024Mi"
+            cpu: "100m"
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
